--- a/form-elements.html
+++ b/form-elements.html
@@ -78,18 +78,18 @@
               <p class="checkbox__title">Checkbox Buttons</p>
               <div class="checkbox__item-list" id="can-checkbox-list">
                 <div class="checkbox__item">
-                  <input id="smoke" type="checkbox"/>
-                  <label class="checbox__lbl" for="smoke">Можно курить
+                  <input class="checkbox__input" id="smoke" type="checkbox"/>
+                  <label class="checkbox__label checbox__lbl" for="smoke">Можно курить
                   </label>
                 </div>
                 <div class="checkbox__item">
-                  <input id="pets" type="checkbox" checked="checked"/>
-                  <label class="checbox__lbl" for="pets">Можно с питомцами
+                  <input class="checkbox__input" id="pets" type="checkbox" checked="checked"/>
+                  <label class="checkbox__label checbox__lbl" for="pets">Можно с питомцами
                   </label>
                 </div>
                 <div class="checkbox__item">
-                  <input id="guest" type="checkbox" checked="checked"/>
-                  <label class="checbox__lbl" for="guest">Можно пригласить гостей (до 10 человек)
+                  <input class="checkbox__input" id="guest" type="checkbox" checked="checked"/>
+                  <label class="checkbox__label checbox__lbl" for="guest">Можно пригласить гостей (до 10 человек)
                   </label>
                 </div>
               </div>
@@ -97,60 +97,60 @@
             <div class="radiobtn">
               <p class="radiobtn__title">Radio Buttons</p>
               <p class="radiobtn__item">
-                <input id="male" name="gender" type="radio" checked="checked"/>
-                <label for="male">Мужчина</label>
+                <input class="radiobtn__input" id="male" name="gender" type="radio" checked="checked"/>
+                <label class="radiobtn__label" for="male">Мужчина</label>
               </p>
               <p class="radiobtn__item">
-                <input id="famale" name="gender" type="radio"/>
-                <label for="famale">Женщина</label>
+                <input class="radiobtn__input" id="famale" name="gender" type="radio"/>
+                <label class="radiobtn__label" for="famale">Женщина</label>
               </p>
             </div>
             <div class="toggle">
               <p class="toggle__title">Toggle</p>
               <p class="toggle__item">
-                <input id="giveSpec" type="checkbox" checked="checked"/>
-                <label for="giveSpec">Получать спецпредложения</label>
+                <input class="toggle__input" id="giveSpec" type="checkbox" checked="checked"/>
+                <label class="toggle__label" for="giveSpec">Получать спецпредложения</label>
               </p>
               <p class="toggle__item">
-                <input id="notGiveSpec" type="checkbox"/>
-                <label for="notGiveSpec">Получать спецпредложения</label>
+                <input class="toggle__input" id="notGiveSpec" type="checkbox"/>
+                <label class="toggle__label" for="notGiveSpec">Получать спецпредложения</label>
               </p>
             </div>
             <div class="likebtn">
               <p class="likebtn__title">like button</p>
               <p class="likebtn__item">
-                <button type="button">2</button>
+                <button class="likebtn__btn" type="button">2</button>
               </p>
               <p class="likebtn__item  likebtn__item_active">
-                <button type="button">12</button>
+                <button class="likebtn__btn" type="button">12</button>
               </p>
             </div>
             <div class="ratebtn">
               <p class="ratebtn__title">rate button</p>
               <div class="ratebtn__item-wrap">
                 <div class="ratebtn__item">
-                  <input type="radio" id="star-rating1-1" name="rating1" value="1"/>
-                  <label for="star-rating1-1"></label>
-                  <input type="radio" id="star-rating1-2" name="rating1" value="2" checked="checked"/>
-                  <label for="star-rating1-2"></label>
-                  <input type="radio" id="star-rating1-3" name="rating1" value="3"/>
-                  <label for="star-rating1-3"></label>
-                  <input type="radio" id="star-rating1-4" name="rating1" value="4"/>
-                  <label for="star-rating1-4"></label>
-                  <input type="radio" id="star-rating1-5" name="rating1" value="5"/>
-                  <label for="star-rating1-5"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating1-1" name="rating1" value="1"/>
+                  <label class="ratebtn__label" for="star-rating1-1"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating1-2" name="rating1" value="2" checked="checked"/>
+                  <label class="ratebtn__label" for="star-rating1-2"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating1-3" name="rating1" value="3"/>
+                  <label class="ratebtn__label" for="star-rating1-3"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating1-4" name="rating1" value="4"/>
+                  <label class="ratebtn__label" for="star-rating1-4"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating1-5" name="rating1" value="5"/>
+                  <label class="ratebtn__label" for="star-rating1-5"></label>
                 </div>
                 <div class="ratebtn__item">
-                  <input type="radio" id="star-rating2-1" name="rating2" value="1" checked="checked"/>
-                  <label for="star-rating2-1"></label>
-                  <input type="radio" id="star-rating2-2" name="rating2" value="2"/>
-                  <label for="star-rating2-2"></label>
-                  <input type="radio" id="star-rating2-3" name="rating2" value="3"/>
-                  <label for="star-rating2-3"></label>
-                  <input type="radio" id="star-rating2-4" name="rating2" value="4"/>
-                  <label for="star-rating2-4"></label>
-                  <input type="radio" id="star-rating2-5" name="rating2" value="5"/>
-                  <label for="star-rating2-5"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating2-1" name="rating2" value="1" checked="checked"/>
+                  <label class="ratebtn__label" for="star-rating2-1"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating2-2" name="rating2" value="2"/>
+                  <label class="ratebtn__label" for="star-rating2-2"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating2-3" name="rating2" value="3"/>
+                  <label class="ratebtn__label" for="star-rating2-3"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating2-4" name="rating2" value="4"/>
+                  <label class="ratebtn__label" for="star-rating2-4"></label>
+                  <input class="ratebtn__input" type="radio" id="star-rating2-5" name="rating2" value="5"/>
+                  <label class="ratebtn__label" for="star-rating2-5"></label>
                 </div>
               </div>
             </div>
@@ -188,12 +188,12 @@
               <div class="pagination__wrap">
                 <p class="pagination__title">Pagination</p>
                 <ul class="pagination__pages">
-                  <li class="pagination__page-item  pagination__page-item_active"><a href="/404.html">1</a></li>
-                  <li class="pagination__page-item"><a href="/404.html">2</a></li>
-                  <li class="pagination__page-item"><a href="/404.html">3</a></li>
-                  <li class="pagination__page-item"><a href="/404.html">...</a></li>
-                  <li class="pagination__page-item"><a href="/404.html">15</a></li>
-                  <li class="pagination__page-item  pagination__page-next"><a href="/404.html">Далее</a></li>
+                  <li class="pagination__page-item  pagination__page-item_active"><a class="pagination__page-link" href="/toxin/404.html">1</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">2</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">3</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">...</a></li>
+                  <li class="pagination__page-item"><a class="pagination__page-link" href="/toxin/404.html">15</a></li>
+                  <li class="pagination__page-item  pagination__page-next"><a class="pagination__page-link" href="/toxin/404.html">Далее</a></li>
                 </ul>
                 <div class="pagination__overview">
                   <p>1 – 12 из 100+ вариантов аренды</p>
@@ -229,43 +229,43 @@
                 </p>
                 <div class="checkbox__item-list" id="expandable-list">
                   <div class="checkbox__item">
-                    <input id="breakfast" type="checkbox"/>
-                    <label class="checbox__lbl" for="breakfast">Завтрак
+                    <input class="checkbox__input" id="breakfast" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl" for="breakfast">Завтрак
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="pen" type="checkbox" checked="checked"/>
-                    <label class="checbox__lbl" for="pen">Письменный стол
+                    <input class="checkbox__input" id="pen" type="checkbox" checked="checked"/>
+                    <label class="checkbox__label checbox__lbl" for="pen">Письменный стол
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="break-sit" type="checkbox" checked="checked"/>
-                    <label class="checbox__lbl" for="break-sit">Стул для кормления
+                    <input class="checkbox__input" id="break-sit" type="checkbox" checked="checked"/>
+                    <label class="checkbox__label checbox__lbl" for="break-sit">Стул для кормления
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="bed" type="checkbox" checked="checked"/>
-                    <label class="checbox__lbl" for="bed">Кроватка
+                    <input class="checkbox__input" id="bed" type="checkbox" checked="checked"/>
+                    <label class="checkbox__label checbox__lbl" for="bed">Кроватка
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="tv" type="checkbox"/>
-                    <label class="checbox__lbl" for="tv">Телевизор
+                    <input class="checkbox__input" id="tv" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl" for="tv">Телевизор
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="shampu" type="checkbox"/>
-                    <label class="checbox__lbl" for="shampu">Шампунь
+                    <input class="checkbox__input" id="shampu" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl" for="shampu">Шампунь
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="tv2" type="checkbox"/>
-                    <label class="checbox__lbl" for="tv2">Телевизор
+                    <input class="checkbox__input" id="tv2" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl" for="tv2">Телевизор
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="shampu2" type="checkbox"/>
-                    <label class="checbox__lbl" for="shampu2">Шампунь
+                    <input class="checkbox__input" id="shampu2" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl" for="shampu2">Шампунь
                     </label>
                   </div>
                 </div>
@@ -283,13 +283,13 @@
                 <p class="checkbox__title">Rich Checkbox Buttons</p>
                 <div class="checkbox__item-list" id="1-rich-checkbox-list">
                   <div class="checkbox__item">
-                    <input id="wild" type="checkbox"/>
-                    <label class="checbox__lbl  checbox__lbl_rich" for="wild">Широкий коридор<span class="checkbox__descr">Ширина коридоров в номере не менее 91 см.</span>
+                    <input class="checkbox__input" id="wild" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl  checbox__lbl_rich" for="wild">Широкий коридор<span class="checkbox__descr">Ширина коридоров в номере не менее 91 см.</span>
                     </label>
                   </div>
                   <div class="checkbox__item">
-                    <input id="help" type="checkbox"/>
-                    <label class="checbox__lbl  checbox__lbl_rich" for="help">Помощник для инвалидов<span class="checkbox__descr">На 1 этаже вас встретит специалист  и проводит до номера.</span>
+                    <input class="checkbox__input" id="help" type="checkbox"/>
+                    <label class="checkbox__label checbox__lbl  checbox__lbl_rich" for="help">Помощник для инвалидов<span class="checkbox__descr">На 1 этаже вас встретит специалист  и проводит до номера.</span>
                     </label>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
                 <div class="comment__pict"><img src="img/murad-5e1e291.png" alt="Мурад Сарафанов"/></div>
                 <div class="likebtn">
                   <p class="likebtn__item  likebtn__item_active">
-                    <button type="button">12</button>
+                    <button class="likebtn__btn" type="button">12</button>
                   </p>
                 </div>
               </div>
