--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -24,7 +24,7 @@
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
-              <div class="logo"><a class="logo__link" href="/">
+              <div class="logo"><a class="logo__link" href="/toxin/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -55,30 +55,30 @@
                   </svg></a></div>
               <div class="main-menu" id="firstMainMenu">
                 <div class="main-menu__burger-icon" id="firstBurgerBtn"><span></span><span></span><span></span></div>
-                <nav>
+                <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item_active"><a>Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">About us</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">About us</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a href="/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">service</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Careers</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">News</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Documentation</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Documentation</a>
                     </li>
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Login</a><a class="button" href="/registration.html">Register</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/toxin/auth.html">Login</a><a class="button" href="/toxin/registration.html">Register</a>
                 <ul class="page-header__auth-list" id="firstAuthList">
-                  <li class="page-header__auth-item"><a href="/auth.html">Login</a></li>
-                  <li class="page-header__auth-item"><a href="/registration.html">Register</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/auth.html">Login</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/registration.html">Register</a></li>
                 </ul>
                 <button class="page-header__auth-profile" id="firstProfileBtn" type="button"></button>
               </section>
@@ -90,7 +90,7 @@
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
-              <div class="logo"><a class="logo__link" href="/">
+              <div class="logo"><a class="logo__link" href="/toxin/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -121,22 +121,22 @@
                   </svg></a></div>
               <div class="main-menu" id="secondMainMenu">
                 <div class="main-menu__burger-icon" id="secondBurgerBtn"><span></span><span></span><span></span></div>
-                <nav>
+                <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item_active"><a>Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a class="main-menu__item-link">Home</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">About us</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">About us</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a href="/404.html">service</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">service</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Careers</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Careers</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">News</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">News</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Documentation</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Documentation</a>
                     </li>
                   </ul>
                 </nav>
@@ -154,7 +154,7 @@
             <div class="page-footer__wrap">
               <div class="page-footer__content">
                 <div class="page-footer__col  page-footer__col_large">
-                  <div class="logo"><a class="logo__link" href="/">
+                  <div class="logo"><a class="logo__link" href="/toxin/">
                       <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g display="block"> 
                           <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -195,10 +195,10 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">Navigation</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a href="/404.html">About us</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">News</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Support</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Products</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">About us</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">News</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Support</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Products</a></li>
                         </ul>
                       </div>
                     </section>
@@ -208,10 +208,10 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">About us</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a href="/404.html">Who we are</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Our team</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Careers</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Investors</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Who we are</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Our team</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Careers</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Investors</a></li>
                         </ul>
                       </div>
                     </section>
@@ -221,9 +221,9 @@
                       <div class="nav-menu__wrap">
                         <h2 class="nav-menu__title">Support</h2>
                         <ul class="nav-menu__list">
-                          <li class="nav-menu__item"><a href="/404.html">Documentation</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Community</a></li>
-                          <li class="nav-menu__item"><a href="/404.html">Get in Touch</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Documentation</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Community</a></li>
+                          <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Get in Touch</a></li>
                         </ul>
                       </div>
                     </section>
@@ -275,7 +275,7 @@
         <footer class="page-footer  page-footer_short">
           <div class="container">
             <div class="page-footer__wrap  page-footer__wrap_short">
-              <div class="logo"><a class="logo__link" href="/">
+              <div class="logo"><a class="logo__link" href="/toxin/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
