--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="colors-and-type__wrap">
         <ul class="colors-and-type__pallete">
-          <li>
+          <li class="colors-and-type__pallete-li">
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #1F2041"></div>
@@ -33,7 +33,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__pallete-li">
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.75"></div>
@@ -44,7 +44,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__pallete-li">
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.5"></div>
@@ -55,7 +55,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__pallete-li">
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.25"></div>
@@ -66,7 +66,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__pallete-li">
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.05"></div>
@@ -77,7 +77,7 @@
               </div>
             </section>
           </li>
-          <li> 
+          <li class="colors-and-type__pallete-li"> 
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #BC9CFF"></div>
@@ -88,7 +88,7 @@
               </div>
             </section>
           </li>
-          <li> 
+          <li class="colors-and-type__pallete-li"> 
             <section class="color-pallete">
               <div class="color-pallete__wrap">
                 <div class="color-pallete__view" style="background-color: #6FCF97"></div>
@@ -101,7 +101,7 @@
           </li>
         </ul>
         <ul class="colors-and-type__typograph">
-          <li>
+          <li class="colors-and-type__typograph-li">
             <section class="typograph">
               <div class="typograph__wrap">
                 <p class="typograph__label">H1</p>
@@ -109,7 +109,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__typograph-li">
             <section class="typograph">
               <div class="typograph__wrap">
                 <p class="typograph__label  typograph__label_h2">H2</p>
@@ -117,7 +117,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__typograph-li">
             <section class="typograph">
               <div class="typograph__wrap">
                 <p class="typograph__label  typograph__label_h3">H3</p>
@@ -125,7 +125,7 @@
               </div>
             </section>
           </li>
-          <li>
+          <li class="colors-and-type__typograph-li">
             <section class="typograph">
               <div class="typograph__wrap">
                 <p class="typograph__label  typograph__label_text">Body</p>
