--- a/room-details.html
+++ b/room-details.html
@@ -21,7 +21,7 @@
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
-              <div class="logo"><a class="logo__link" href="/">
+              <div class="logo"><a class="logo__link" href="/toxin/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -52,34 +52,34 @@
                   </svg></a></div>
               <div class="main-menu" id="mainMenu">
                 <div class="main-menu__burger-icon" id="mainMenuBurgerIcon"><span></span><span></span><span></span></div>
-                <nav>
+                <nav class="main-menu__nav">
                   <ul class="main-menu__list">
-                    <li class="main-menu__item"><a href="/404.html">О нас</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">О нас</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Услуги</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a href="/404.html">Подбор отелей</a></li>
-                        <li class="main-menu__sub-item"><a href="/404.html">Заказать трансфер</a></li>
-                        <li class="main-menu__sub-item"><a href="/404.html">Рейтинг отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Подбор отелей</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Заказать трансфер</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Рейтинг отелей</a></li>
                       </ul>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Вакансии</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Вакансии</a>
                     </li>
-                    <li class="main-menu__item"><a href="/404.html">Новости</a>
+                    <li class="main-menu__item"><a class="main-menu__item-link" href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Соглашения</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a class="main-menu__item-link" href="/404.html">Соглашения</a>
                       <ul class="main-menu__sub-menu">
-                        <li class="main-menu__sub-item"><a href="/404.html">Пользовательские</a></li>
-                        <li class="main-menu__sub-item"><a href="/404.html">Международные</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Пользовательские</a></li>
+                        <li class="main-menu__sub-item"><a class="main-menu__item-link" href="/404.html">Международные</a></li>
                       </ul>
                     </li>
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/toxin/auth.html">Войти</a><a class="button" href="/toxin/registration.html">Зарегистрироваться</a>
                 <ul class="page-header__auth-list" id="authListId">
-                  <li class="page-header__auth-item"><a href="/auth.html">Войти</a></li>
-                  <li class="page-header__auth-item"><a href="/registration.html">Зарегистрироваться</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/auth.html">Войти</a></li>
+                  <li class="page-header__auth-item"><a class="page-header__auth-item-link" href="/toxin/registration.html">Зарегистрироваться</a></li>
                 </ul>
                 <button class="page-header__auth-profile" id="authButton" type="button"></button>
               </section>
@@ -145,7 +145,7 @@
                         <div class="comment__pict"><img src="img/murad-5e1e291.png" alt="Мурад Сарафанов"/></div>
                         <div class="likebtn">
                           <p class="likebtn__item  likebtn__item_active">
-                            <button type="button">12</button>
+                            <button class="likebtn__btn" type="button">12</button>
                           </p>
                         </div>
                       </div>
@@ -160,7 +160,7 @@
                         <div class="comment__pict"><img src="img/patric-8cf389b.png" alt="Патрисия Стёклышкова"/></div>
                         <div class="likebtn">
                           <p class="likebtn__item">
-                            <button type="button">2</button>
+                            <button class="likebtn__btn" type="button">2</button>
                           </p>
                         </div>
                       </div>
@@ -246,7 +246,7 @@
           <div class="page-footer__wrap">
             <div class="page-footer__content">
               <div class="page-footer__col  page-footer__col_large">
-                <div class="logo"><a class="logo__link" href="/">
+                <div class="logo"><a class="logo__link" href="/toxin/">
                     <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g display="block"> 
                         <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -287,10 +287,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Навигация</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a href="/404.html">О нас</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Новости</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Служба поддержки</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Услуги</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О нас</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Новости</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Служба поддержки</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Услуги</a></li>
                       </ul>
                     </div>
                   </section>
@@ -300,10 +300,10 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">О нас</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a href="/404.html">О сервисе</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Наша команда</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Вакансии</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Инвесторы</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">О сервисе</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Наша команда</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Вакансии</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Инвесторы</a></li>
                       </ul>
                     </div>
                   </section>
@@ -313,9 +313,9 @@
                     <div class="nav-menu__wrap">
                       <h2 class="nav-menu__title">Служба поддержки</h2>
                       <ul class="nav-menu__list">
-                        <li class="nav-menu__item"><a href="/404.html">Соглашения</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Сообщества</a></li>
-                        <li class="nav-menu__item"><a href="/404.html">Связь с нами</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Соглашения</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Сообщества</a></li>
+                        <li class="nav-menu__item"><a class="nav-menu__link" href="/404.html">Связь с нами</a></li>
                       </ul>
                     </div>
                   </section>
